[gd_scene load_steps=18 format=2]

[ext_resource path="res://gfx/enemies/holy_robot/torso.png" type="Texture" id=1]
[ext_resource path="res://gfx/enemies/holy_robot/rightLowerArm.png" type="Texture" id=2]
[ext_resource path="res://gfx/enemies/holy_robot/head.png" type="Texture" id=3]
[ext_resource path="res://gfx/enemies/holy_robot/rightUpperArm.png" type="Texture" id=4]
[ext_resource path="res://gfx/enemies/holy_robot/leftUpperArm.png" type="Texture" id=5]
[ext_resource path="res://src/enemy/HolyRobot00.gd" type="Script" id=6]
[ext_resource path="res://src/enemy/HolyArm.gd" type="Script" id=7]
[ext_resource path="res://src/enemy/Laser.tscn" type="PackedScene" id=8]
[ext_resource path="res://sfx/laser.wav" type="AudioStream" id=9]
[ext_resource path="res://gfx/shadow512.png" type="Texture" id=10]
[ext_resource path="res://src/enemy/Head.gd" type="Script" id=11]
[ext_resource path="res://src/enemy/LowerArm.gd" type="Script" id=12]

[sub_resource type="CircleShape2D" id=1]
radius = 213.5

[sub_resource type="CapsuleShape2D" id=2]
radius = 40.0
height = 250.0

[sub_resource type="RayShape2D" id=3]
length = 1800.0

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 1 ),
"transitions": PoolRealArray( 0.420448, 1, 1 ),
"update": 0,
"values": [ Vector2( 250, 0 ), Vector2( 245, 60 ), Vector2( 250, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UpperArm:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 1 ),
"transitions": PoolRealArray( 0.420448, 1, 1 ),
"update": 0,
"values": [ 0.0, 13.3, 0.0 ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 1 ),
"transitions": PoolRealArray( 0.420448, 1, 1 ),
"update": 0,
"values": [ Vector2( -250, 0 ), Vector2( -245, 60 ), Vector2( -250, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UpperArm:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 1 ),
"transitions": PoolRealArray( 0.420448, 1, 1 ),
"update": 0,
"values": [ 0.0, -13.3, 0.0 ]
}

[node name="HolyRobot00" type="StaticBody2D" groups=[
"fragile",
]]
scale = Vector2( 0.5, 0.5 )
z_index = 10
script = ExtResource( 6 )

[node name="Shadow" type="Sprite" parent="."]
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Head" type="Sprite" parent="."]
texture = ExtResource( 3 )
script = ExtResource( 11 )

[node name="Sight" type="Area2D" parent="Head"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Head/Sight"]
polygon = PoolVector2Array( -3.13586, -114.991, 1402.95, -822.822, 707.004, -1724.97, -724.975, -1693.47, -1446.69, -840.006 )

[node name="RightArm" type="Node2D" parent="."]
position = Vector2( 250, 0 )
script = ExtResource( 7 )
Bullet = ExtResource( 8 )

[node name="UpperArm" type="Sprite" parent="RightArm"]
texture = ExtResource( 4 )

[node name="LowerArm" type="StaticBody2D" parent="RightArm" groups=[
"fragile",
]]
position = Vector2( 70, 0 )
script = ExtResource( 12 )

[node name="Sprite2" type="Sprite" parent="RightArm/LowerArm"]
position = Vector2( 0, -90 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightArm/LowerArm"]
position = Vector2( 0, -90 )
shape = SubResource( 2 )

[node name="LaserPos" type="Position2D" parent="RightArm/LowerArm"]
position = Vector2( 0, -260 )

[node name="Detector" type="Area2D" parent="RightArm/LowerArm"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightArm/LowerArm/Detector"]
rotation = 3.14159
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="RightArm"]
anims/shoot = SubResource( 4 )

[node name="LaserSound" type="AudioStreamPlayer2D" parent="RightArm"]
stream = ExtResource( 9 )

[node name="LeftArm" type="Node2D" parent="."]
position = Vector2( -250, 0 )
script = ExtResource( 7 )
Bullet = ExtResource( 8 )

[node name="UpperArm" type="Sprite" parent="LeftArm"]
texture = ExtResource( 5 )

[node name="LowerArm" type="StaticBody2D" parent="LeftArm" groups=[
"fragile",
]]
position = Vector2( -70, 0 )
script = ExtResource( 12 )

[node name="Sprite2" type="Sprite" parent="LeftArm/LowerArm"]
position = Vector2( 0, -90 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftArm/LowerArm"]
position = Vector2( 0, -90 )
shape = SubResource( 2 )

[node name="LaserPos" type="Position2D" parent="LeftArm/LowerArm"]
position = Vector2( 0, -260 )

[node name="Detector" type="Area2D" parent="LeftArm/LowerArm"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftArm/LowerArm/Detector"]
rotation = 3.14159
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="LeftArm"]
anims/shoot = SubResource( 5 )

[node name="LaserSound" type="AudioStreamPlayer2D" parent="LeftArm"]
position = Vector2( 500, 0 )
stream = ExtResource( 9 )
[connection signal="body_entered" from="Head/Sight" to="." method="_on_Sight_body_entered"]
[connection signal="body_exited" from="Head/Sight" to="." method="_on_Sight_body_exited"]
[connection signal="body_entered" from="RightArm/LowerArm/Detector" to="RightArm" method="_on_Detector_body_entered"]
[connection signal="body_exited" from="RightArm/LowerArm/Detector" to="RightArm" method="_on_Detector_body_exited"]
[connection signal="animation_finished" from="RightArm/AnimationPlayer" to="RightArm" method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="LeftArm/LowerArm/Detector" to="LeftArm" method="_on_Detector_body_entered"]
[connection signal="body_exited" from="LeftArm/LowerArm/Detector" to="LeftArm" method="_on_Detector_body_exited"]
[connection signal="animation_finished" from="LeftArm/AnimationPlayer" to="LeftArm" method="_on_AnimationPlayer_animation_finished"]
